<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data />
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_70">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp50"
            android:layout_marginEnd="@dimen/dp50"
            app:cardCornerRadius="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/line_top"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dp20"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginEnd="@dimen/dp20"
                    android:gravity="center_horizontal"
                    android:textAllCaps="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line_top"
                    tools:text="Description" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_spending"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp40"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/spending"
                    android:textSize="@dimen/sp20"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingRight="@dimen/dp10"
                    android:layout_marginEnd="@dimen/dp10"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp30"
                    android:singleLine="true"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_description"/>

                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp40"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/price"
                    android:textSize="@dimen/sp20"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingRight="@dimen/dp10"
                    android:layout_marginEnd="@dimen/dp10"
                    android:layout_marginStart="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp30"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_spending"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="@dimen/dp10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_price">

                    <TextView
                        android:id="@+id/tv_cancel"
                        android:layout_width="@dimen/dp100"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_bg"
                        android:padding="@dimen/dp10"
                        android:textAllCaps="true"
                        android:gravity="center"
                        android:text="@string/confirm_cancel"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tv_ok"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="CANCEL" />

                    <TextView
                        android:id="@+id/tv_ok"
                        android:layout_width="@dimen/dp100"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/button_bg"
                        android:padding="@dimen/dp10"
                        android:textAllCaps="true"
                        android:text="@string/confirm_ok"
                        android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tv_cancel"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="OK" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</layout>
