<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data />
    <ScrollView
        android:id="@+id/sv_home"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:scrollbars="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <ProgressBar
                android:id="@+id/pg_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <FrameLayout
                android:id="@+id/fl_calendar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp300"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">
                <ImageView
                    android:id="@+id/iv_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp300"
                    android:background="@drawable/bg_current_date" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="02"
                android:textSize="@dimen/sp110"
                android:paddingTop="@dimen/dp40"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tv_day"/>

            <TextView
                android:id="@+id/tv_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/31"
                android:paddingTop="@dimen/dp40"
                android:textSize="@dimen/sp110"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/actv_spending"
                android:layout_width="@dimen/dp400"
                android:layout_height="@dimen/dp40"
                android:background="@drawable/edit_bg"
                android:hint="@string/spending"
                android:textSize="@dimen/sp20"
                android:paddingLeft="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:layout_marginTop="@dimen/dp30"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fl_calendar"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/actv_price"
                android:layout_width="@dimen/dp400"
                android:layout_height="@dimen/dp40"
                android:background="@drawable/edit_bg"
                android:hint="@string/price"
                android:textSize="@dimen/sp20"
                android:paddingLeft="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:layout_marginTop="@dimen/dp30"
                android:inputType="number"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actv_spending"/>

            <Button
                android:id="@+id/bt_save"
                android:layout_width="@dimen/dp300"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/save"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/button_bg"
                app:layout_constraintLeft_toLeftOf="@+id/actv_price"
                app:layout_constraintRight_toRightOf="@+id/actv_price"
                app:layout_constraintTop_toBottomOf="@+id/rv_suggest"
                tools:ignore="UnusedAttribute" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_suggest"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_marginTop="@dimen/dp10"
                android:visibility="invisible"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/actv_price"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginLeft="@dimen/dp6"
                android:layout_marginRight="@dimen/dp6"
                app:cardElevation="@dimen/dp8"
                app:cardCornerRadius="@dimen/dp8"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_save">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_reminder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingTop="@dimen/dp10"
                        android:paddingLeft="@dimen/dp10"
                        android:paddingRight="@dimen/dp10"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <NumberPicker
                        android:id="@+id/np_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/dp10"
                        android:layout_marginTop="@dimen/dp10"
                        app:layout_constraintRight_toLeftOf="@+id/v_line"
                        app:layout_constraintTop_toBottomOf="@+id/tv_reminder"/>

                    <NumberPicker
                        android:id="@+id/np_minute"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp10"
                        android:layout_marginLeft="@dimen/dp10"
                        app:layout_constraintLeft_toRightOf="@+id/v_line"
                        app:layout_constraintTop_toBottomOf="@+id/tv_reminder"/>

                    <View
                        android:id="@+id/v_line"
                        android:layout_width="@dimen/dp1"
                        android:layout_height="match_parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sw_reminder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@+id/tv_reminder"
                        app:layout_constraintRight_toRightOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
